--- a/.github/workflows/sleeper-sync.yml
+++ b/.github/workflows/sleeper-sync.yml
@@ -1,15 +1,8 @@
+# .github/workflows/sleeper-sync.yml
 name: Sleeper Sync
 
 permissions:
   contents: write
-
-on:
-  workflow_dispatch: {}
-  schedule:
-    - cron: "*/30 * * * *"
-
-
-name: Sleeper Sync
 
 on:
   workflow_dispatch: {}
@@ -37,11 +30,12 @@ jobs:
           SLEEPER_WEEK: ${{ vars.SLEEPER_WEEK }}
         run: node scripts/fetch_sleeper.js
 
-            - name: Commit & push changes
+      - name: Commit & push changes (resilient)
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          # make sure we're on the default branch
           BRANCH="${GITHUB_REF_NAME:-main}"
           git fetch origin "$BRANCH" || true
           git checkout "$BRANCH" || git checkout -b "$BRANCH"
